# tessera

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.prod  MISSING_FEATURES.md  README.md  SPEC.md  TODO.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  next-steps.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
alembic/versions/: 004_add_user_auth_and_guarantee_mode.py  006_expand_api_key_prefix_length.py
docs/api/: api-keys.md  assets.md  audit.md  contracts.md  overview.md  proposals.md  registrations.md  sync.md  teams.md  webhooks.md
docs/concepts/: consumer-registration.md
docs/getting-started/: configuration.md
docs/guides/: dbt-integration.md  python-sdk.md
examples/: quickstart.py
examples/data/: manifest.json
scripts/: build_dbt_projects.py  docker-entrypoint.sh  generate_manifest.py  import_manifest.py  report_to_tessera.py  seed_demo.py
src/tessera/: config.py  main.py
src/tessera/api/: api_keys.py  assets.py  audit.py  audits.py  auth.py  bulk.py  contracts.py  dependencies.py  errors.py  impact.py  proposals.py  search.py  sync.py  teams.py  users.py  webhooks.py
src/tessera/cli/: __init__.py
src/tessera/db/: __init__.py  database.py  models.py
src/tessera/models/: __init__.py  acknowledgment.py  api_key.py  asset.py  bulk.py  contract.py  enums.py  proposal.py  team.py  user.py
src/tessera/services/: __init__.py  audit.py  auth.py  expiration.py  graphql.py  openapi.py  schema_diff.py  slack.py  webhooks.py
src/tessera/static/css/: style.css
src/tessera/static/js/: api.js
src/tessera/templates/: asset_detail.html  assets.html  audit_log.html  base.html  contract_detail.html  contracts.html  dashboard.html  import.html  login.html  notifications.html  proposal_detail.html  proposals.html  settings.html  team_detail.html  teams.html  user_detail.html  users.html
src/tessera/web/: __init__.py  routes.py
tests/: test_assets.py  test_audits_wap.py  test_auth_session.py  test_authorization_gaps.py  test_bulk.py  test_cache.py  test_caching.py  test_cli.py  test_contracts.py  test_graphql.py  test_openapi.py  test_proposals.py  test_proposals_edge_cases.py  test_search.py  test_sync.py  test_users.py  test_webhook_delivery.py  test_webhooks.py  test_workflow_integration.py
tests/fixtures/: dbt_manifest.json
tests/fixtures/demo_dbt_project/: .user.yml  README.md  dbt_project.yml  profiles.yml
tests/fixtures/demo_dbt_project/models/marts/: _marts.yml  dim_customers.sql  fct_orders.sql
tests/fixtures/demo_dbt_project/models/staging/: _staging.yml  stg_customers.sql  stg_orders.sql
tests/fixtures/demo_dbt_project/seeds/: raw_customers.csv  raw_orders.csv
tests/fixtures/demo_dbt_project/tests/: assert_customers_have_valid_email.sql  assert_positive_revenue.sql
tests/fixtures/demo_dbt_projects/: README.md
tests/fixtures/demo_dbt_projects/core/: .user.yml  dbt_project.yml  profiles.yml
tests/fixtures/demo_dbt_projects/core/models/marts/: _marts.yml  dim_customers.sql  dim_products.sql  fct_daily_revenue.sql  fct_orders.sql  fct_payments.sql
tests/fixtures/demo_dbt_projects/core/models/staging/: _staging.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
tests/fixtures/demo_dbt_projects/core/seeds/: raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_payments.csv  raw_products.csv
tests/fixtures/demo_dbt_projects/core/tests/: assert_margin_is_positive.sql  assert_no_future_orders.sql  assert_orders_have_items.sql  assert_positive_revenue.sql  assert_valid_customer_email.sql
tests/fixtures/demo_dbt_projects/finance/: .user.yml  dbt_project.yml  profiles.yml
tests/fixtures/demo_dbt_projects/finance/models/marts/: _marts.yml  dim_accounts.sql  fct_budget_performance.sql  fct_expenses.sql  fct_invoices.sql  fct_monthly_pl.sql
tests/fixtures/demo_dbt_projects/finance/models/staging/: _staging.yml  stg_accounts.sql  stg_budgets.sql  stg_expenses.sql  stg_invoices.sql
tests/fixtures/demo_dbt_projects/finance/seeds/: raw_accounts.csv  raw_budgets.csv  raw_expenses.csv  raw_invoices.csv
tests/fixtures/demo_dbt_projects/finance/tests/: assert_balanced_accounts.sql  assert_positive_invoice_amounts.sql
tests/fixtures/demo_dbt_projects/marketing/: .user.yml  dbt_project.yml  profiles.yml
tests/fixtures/demo_dbt_projects/marketing/models/marts/: _marts.yml  dim_campaigns.sql  fct_conversions.sql  fct_marketing_daily.sql  fct_web_traffic.sql
tests/fixtures/demo_dbt_projects/marketing/models/staging/: _staging.yml  stg_ad_spend.sql  stg_campaigns.sql  stg_conversions.sql  stg_website_sessions.sql
tests/fixtures/demo_dbt_projects/marketing/seeds/: raw_ad_spend.csv  raw_campaigns.csv  raw_conversions.csv  raw_website_sessions.csv
tests/fixtures/demo_dbt_projects/marketing/tests/: assert_positive_roas.sql  assert_spend_within_budget.sql  assert_valid_ctr.sql
